UPDATED for Jenkins Integration

--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,8 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.source>17</maven.compiler.source>
-		<maven.compiler.target>17</maven.compiler.target>
+		<maven.compiler.source>11</maven.compiler.source>
+		<maven.compiler.target>11</maven.compiler.target>
 	</properties>
 
 
@@ -137,10 +137,10 @@
 
 				<configuration>
 					<forkCount>3</forkCount>
-					<reuseForks>true</reuseForks>
+					<reuseForks>true</reuseForks>	
 					<suiteXmlFiles>
-	<!--					 <suiteXmlFile>src/test/resources/testrunners/gorest.xml</suiteXmlFile> -->
-						<suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
+						 <suiteXmlFile>src/test/resources/testrunners/gorest.xml</suiteXmlFile> 
+				<!--		<suiteXmlFile>${suiteXmlFile}</suiteXmlFile>-->
 					</suiteXmlFiles>
 
 				</configuration>
