--- a/pom.xml
+++ b/pom.xml
@@ -139,8 +139,8 @@
 					<forkCount>3</forkCount>
 					<reuseForks>true</reuseForks>	
 					<suiteXmlFiles>
-						 <suiteXmlFile>src/test/resources/testrunners/gorest.xml</suiteXmlFile> 
-				<!--		<suiteXmlFile>${suiteXmlFile}</suiteXmlFile>-->
+	<!--					 <suiteXmlFile>src/test/resources/testrunners/gorest.xml</suiteXmlFile> -->
+						<suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
 					</suiteXmlFiles>
 
 				</configuration>
